--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 9090
 
 spring:
   application:
@@ -7,16 +7,16 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包 com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: root
+    password: 123456
     druid:
       test-while-idle: false
   main:
     allow-circular-references: true
 
 mybatis:
-  mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.liupeng.springcloud.entities    # 所有Entity别名类所在包
+  mapperLocations: classpath:mapper/*.xml, classpath:mapper/user/*.xml
+  type-aliases-package: com.spark.springcloud.entities    # 所有Entity别名类所在包
 
 
